--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>FlockPilot — LLM OS for Droids</title>
+  <title>FlockPilot - LLM OS for Droids</title>
   <meta name="description" content="Type the mission → contracted plan → shielded execution → tamper-evident replay. Side-by-side clips: with planner vs baseline." />
   <meta name="theme-color" content="#0B1220" />
   <link rel="preload" href="assets/img/bg-hero.png" as="image" />
@@ -129,12 +129,7 @@
       <a href="assets/evidence/scorecard.pdf">KPI scorecard</a> •
       <a href="assets/evidence/replay_logs.zip">replay logs</a>
     </div>
-    <div class="hint">Videos are hosted natively on GitHub; files kept under 100&nbsp;MB each.</div>
-
-    <footer>
-      <span>Contact: <a href="mailto:YOUR_EMAIL">YOUR_EMAIL</a></span>
-      <span>Repo: <a href="https://github.com/YOUR_GITHUB_HANDLE/YOUR_SITE_REPO">github.com/YOUR_GITHUB_HANDLE/YOUR_SITE_REPO</a></span>
-    </footer>
+    
   </div>
 </body>
 </html>
