--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>FlockPilot — LLM OS for Droids</h1>
+      <h1>FlockPilot - LLM OS for Droids</h1>
       <div class="tag">Words → Contracted Plan → Shielded Execution → Tamper‑Evident Replay</div>
     </header>
 
