--- a/index.html
+++ b/index.html
@@ -133,11 +133,10 @@
            budgets met (planner p95, drop-late, comms), parity across seeds.</p>
       </div>
       <div class="mini">
-        <h4>Speedrun deliverables</h4>
+        <h4>Deliverables</h4>
         <ul>
-          <li><b>Week 1:</b> M0 acceptance clip + signed evidence pack</li>
-          <li><b>By program end:</b> Planner v2 A/B &gt; v1; publish <b>FPC/FRL spec v1.0</b> + <code>fp conformance</code></li>
-          <li><b>Traction:</b> 2 design-partner LOIs (solar/forestry/farming)</li>
+          <li><b>Today:</b> 30-second demo passes acceptance; <b>signed evidence pack</b> delivered</li>
+          <li><b>By April:</b> 2 live pilots; open spec + 1-command verifier; signed evidence packs; evolved planner; 20+ safety invariants; public replay set</li>
         </ul>
       </div>
     </section>
