--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <div class="wrap">
     <header>
       <h1>FlockPilot – LLM OS for Droids</h1>
-      <div class="tag">Words → Contracted Plan → Shielded Execution → Tamper-Evident Replay</div>
+      <div class="tag">Mission Text → Signed Plan → Shielded Execution</div>
     </header>
 
     <p class="blurb">
@@ -76,10 +76,10 @@
     </p>
 
     <div class="pillrow">
-      <span class="pill">deterministic</span>
-      <span class="pill">auditable</span>
-      <span class="pill">radio-light comms</span>
-      <span class="pill">plans are contracts</span>
+      <span class="pill">Deterministic replay</span>
+      <span class="pill">Signed evidence</span>
+      <span class="pill">Contract-first planner</span>
+      <span class="pill">Radio-light mesh</span>
     </div>
 
     <div class="callout">
@@ -97,7 +97,7 @@
           </video>
         </div>
         <div class="pillrow">
-          <span class="pill">min-sep ≥ 3 m</span>
+          <span class="pill">min-sep ≥ 0.5 m</span>
           <span class="pill">NFZ: PASS</span>
           <span class="pill">replay_id stable</span>
           <span class="pill">signed evidence pack</span>
